# emby-to-trakt

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
emby_to_trakt/: __init__.py  cli.py  config.py  emby_client.py  models.py  storage.py  trakt_auth.py  trakt_client.py  unmatched.py
tests/: test_cli.py  test_config.py  test_emby_client.py  test_integration.py  test_models.py  test_storage.py  test_trakt_auth.py  test_trakt_client.py  test_unmatched.py
